# IO

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/io/: file.hpp  io.hpp  ios_base.hpp  iostream.hpp  istream.hpp  ostream.hpp  socket.hpp  stream.hpp  tags.hpp
include/io/internal/: concepts.hpp  internal.hpp
include/io/internal/impl/: iostream.hpp  stream.hpp  tags.hpp
include/io/internal/impl/stream/: ios_base.hpp  iostream.hpp  istream.hpp  ostream.hpp
